	dialog was closed by means of the WM-provided close button.
2016-02-17 Fred Gleason <fredg@paravelsystems.com>
	* Set the statistics display panels to be read-only in
	'src/glassplayergui/statspanel.cpp'.
2016-02-18 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.5.
2016-04-01 Fred Gleason <fredg@paravelsystems.com>
	* Added support for JACK.
2016-04-04 Fred Gleason <fredg@paravelsystems.com>
	* Added '--server-script-up=' and '--server-script-down=' switches
	to glassplayer(1).
2016-04-04 Fred Gleason <fredg@paravelsystems.com>
	* Fixed typos in the 'DEVICE OPTIONS' section of
	'docs/glassplayer.xml'.
2016-04-04 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassplayer/dev_jack.cpp' that caused xruns.
2016-04-04 Fred Gleason <fredg@paravelsystems.com>
	* Added a '--meter-data' switch	to glassplayer(1).
2016-04-05 Fred Gleason <fredg@paravelsystems.com>
	* Added level meters to glassplayergui(1).
2016-04-05 Fred Gleason <fredg@paravelsystems.com>
	* Implemented support for the '--meter-data' switch for JACK
	devices.
2016-04-05 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassplayer/glassplayer.cpp' that caused
	invalid meter levels to be emitted.
2016-04-05 Fred Gleason <fredg@paravelsystems.com>
	* Implemented metadata updates for JACK devices.
2016-04-12 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassplayer/dev_jack.cpp' that threw segfaults
	when recovering from a dropped server connection.
2016-05-02 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in 'glassplayer/dev_jack.cpp' and
	'glassplayer/dev_jack.h' that broke the build on RHEL 6.
2016-05-02 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.6.
2016-11-03 Fred Gleason <fredg@paravelsystems.com>
	* Added the 'audio/x-mpeg' mimetype to the Codec::TypeMpeg1 codec
	in 'src/common/codec.cpp'.
	* Implemented a '--post-data=' parameter in glassplayer(1).